requested tag(s).  If there is not matching entries, display all
entries of the database.


*****  Wed Dec 1 21:43:53 CET 2021  *****

In the browser, hide the info_bar when searching for tags,
(such that the search bar is at the bottom and the tab completions
are always displayed above it).

*****

Fixed search word completions (display only on-screen entries).
This commit should complete the new browser tag capabilities
proposed in #75 (only bibm ads-add tagging left to update)


*****  Sat Dec 4 01:36:03 CET 2021  *****

Updated am.add_bibtex() to include optional tags.
Updated tests and docstrings.

*****

Updated cli_ads_add() to enable passing tags to the entries.
Updated tests for many user-input cases for this cli.

*****

Fixed screen output when cli_ads_add()'s input prompt is blank.
Added test.

*****

Some PEP8ing.


*****  Sat Dec 4 13:08:59 CET 2021  *****

Updated docs adding the tag directive
and updating the index and the ads-add directive.

*****

Improved syntax in am.add_bibtex().
(No actual change in behavior)


*****  Sat Dec 4 19:58:34 CET 2021  *****

Implemented bm.display_list() to display a list of BibTeX entries
with different verbosity levels.
Documented and tested.

*****

Enabled possibility to display entries with given tags from cli.
Modified cli_search() and cli_tag() to use bm.display_list().

*****

Changed verb argument user-interface for bibm search command,
now it requires an interger value (thus enabling negative values).
Updated docs and tests.


*****  Sun Dec 5 17:33:57 CET 2021  *****

Implemented u.tokenizer() function to fast-track formatted-text
tuples for attribute:value pairs.
Documented and tested.

*****

Refactored bm.display_list() to display formatted text
rather than plain text.
Updated tests.

*****

Refactored am.display() to display formatted text
rather than plain text.
Updated tests.

*****

Updated api.rst docs.

*****

Bumped bibmanager to version 1.4.0
When merged, this commit solves #75
